person 4 phase 0
